tests/machine/x/rust/nested_function.error
line 0: compile: exit status 1
error[E0434]: can't capture dynamic environment in a fn item
 --> /workspace/mochi/tests/machine/x/rust/nested_function.rs:4:20
  |
4 |             return x + y;
  |                    ^
  |
  = help: use the `|| { ... }` closure form instead

warning: unused variable: `x`
 --> /workspace/mochi/tests/machine/x/rust/nested_function.rs:2:14
  |
2 |     fn outer(x: i32) -> i32 {
  |              ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
  = note: `#[warn(unused_variables)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0434`.

fn main() {
